@@ -302,7 +302,11 @@ void FrameLoaderClientQt::dispatchDidChangeLocationWithinPage()
     if (dumpFrameLoaderCallbacks)
         printf("%s - didChangeLocationWithinPageForFrame\n", qPrintable(drtDescriptionSuitableForTestResult(m_frame)));
 
-    notImplemented();
+    if (!m_webFrame)
+        return;
+
+    emit m_webFrame->urlChanged(m_webFrame->url());
+    m_webFrame->page()->d->updateNavigationActions();
 }
 
 
